# regendoc

./: .gitignore  .hgignore  .pre-commit-config.yaml  .travis.yml  MANIFEST.in  README.md  example.txt  pyproject.toml  regendoc  regendoc.py  setup.cfg  setup.py  test_regendoc.py  tox.ini
.github/workflows/: python-tests.yml
regendoc/: __init__.py  actions.py  parse.py  substitute.py
simpledoctest/: blockread.py  classify.py  executer.py
src/regendoc/: __init__.py  _cli.py  parse.py
testing/: test_blockread.py  test_classify.py  test_executer.py
