[metadata]
name=regendoc
description = a tool to check/update simple file/shell examples in documentation
url=http://github.com/pytest-dev/regendoc/
author=Ronny Pfannschmidt
author_email=opensource@ronnypfannschmidt.de
packages=regendoc
license=MPL2
require_python = >= 3.7

[options]
install_requires=
  typer
  rich
include_package_data = true

[options.entry_points]
console_scripts =
  regendoc = regendoc:main
