[metadata]
name=regendoc
description = a tool to check/update simple file/shell examples in documentation
long_description = file:README.md
long_description_content_type = text/markdown
url=http://github.com/pytest-dev/regendoc/
author=Ronny Pfannschmidt
author_email=opensource@ronnypfannschmidt.de
license=MPL2
require_python = >= 3.7

[options]
packages=regendoc
install_requires=
  typer
  rich
include_package_data = true

[options.entry_points]
console_scripts =
  regendoc = regendoc:main
